--- a/mksolucion/bin/mksolucion.dll.config
+++ b/mksolucion/bin/mksolucion.dll.config
@@ -29,6 +29,9 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+
+    <sessionState timeout="30"></sessionState>
+    
     <pages>
       <namespaces>
         <add namespace="Kendo.Mvc.UI" />
