--- a/mksolucion/mksolucion.csproj
+++ b/mksolucion/mksolucion.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Areas\portal\Controllers\ManagerController.cs" />
     <Compile Include="Areas\portal\Controllers\NotificacionesController.cs" />
     <Compile Include="Areas\portal\Controllers\pasoscompletarinformacionController.cs" />
+    <Compile Include="Areas\portal\Controllers\PlanesController.cs" />
     <Compile Include="Areas\portal\Controllers\pln02_tipoplanController.cs" />
     <Compile Include="Areas\portal\Controllers\ReportenotificacionesCorreoController.cs" />
     <Compile Include="Areas\portal\Controllers\rolesController.cs" />
@@ -230,6 +231,7 @@
     <Compile Include="Areas\portal\ViewModels\_lis02_clasificacion.cs" />
     <Compile Include="Areas\portal\ViewModels\_ntf01_notificaciones.cs" />
     <Compile Include="Areas\portal\ViewModels\_ntf02_tiponotificacioncorreo.cs" />
+    <Compile Include="Areas\portal\ViewModels\_pln01_planes.cs" />
     <Compile Include="Areas\portal\ViewModels\_pln03_tipocobro.cs" />
     <Compile Include="Areas\portal\ViewModels\_pnl02_tipoplan.cs" />
     <Compile Include="Areas\portal\Models\AspNetRoles.cs" />
@@ -493,6 +495,10 @@
     <Content Include="Areas\portal\Views\Tipocobro\Delete.cshtml" />
     <Content Include="Areas\portal\Views\TipoPlanes\Index.cshtml" />
     <Content Include="Areas\portal\Views\TipoPlanes\Details.cshtml" />
+    <Content Include="Areas\portal\Views\TipoPlanes\Create.cshtml" />
+    <Content Include="Areas\portal\Views\TipoPlanes\Edit.cshtml" />
+    <Content Include="Areas\portal\Views\TipoPlanes\Delete.cshtml" />
+    <Content Include="Areas\portal\Views\Planes\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -558,6 +564,7 @@
     <Folder Include="Areas\completarinformacion\Models\" />
     <Folder Include="Areas\completarinformacion\Views\Shared\" />
     <Folder Include="Areas\portal\Views\Shared\" />
+    <Folder Include="Views\Planes\" />
     <Folder Include="Views\Shared\plantillas\" />
     <Folder Include="Views\Tipocobro\" />
     <Folder Include="Views\TipoPlanes\" />
